--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
     <!-- Start video section -->
     <div class="video">
       <video autoplay muted loop>
-        <source src="assets/v2.mp4" type="video/mp4" class="vid" />
+        <source src="v2.mp4" type="video/mp4" class="vid" />
       </video>
       <div class="text">
         <h2>SUPER AWESOME VIDEO HERE</h2>
